update readme and new router addCart
